--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_383130_czyo4j6dtjxos9k9.css">
     <!-- 在线css编辑器样式 -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jotted/latest/jotted.min.css">
-    <title>实地通管理后台</title>
+    <title>管理后台</title>
   </head>
   	
   <body >
@@ -19,6 +19,7 @@
     <div id="app" >
     	
     </div>
-    <script src="/dist/build.js"></script>
+    <script src="/dist/build.js">
+    </script>
   </body>
 </html>
